<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Giveout!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="section_gifts">Gifts</string>
    <string name="section_gifts_chains">Gifts chains</string>
    <string name="section_top_givers">Top Gift givers</string>
    <string name="section_my_gifts">My Gifts</string>
    <string name="filter_by_title">Filter by title</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_gift">Create new gift</string>
    <string name="activity_create_update_gift">Create a gift</string>
    <string name="activity_settings">Settings</string>
    <string name="gift_touched_me">This Gift touched me</string>
    <string name="flag_inappropriate">Flag as inappropriate</string>
    <string name="login_title">Enter your credentials</string>
    <string name="please_login">Please sign in</string>
    <string name="gift_unpublished">Unpublished</string>
    <string name="gift_touches_number">%1$d</string>
    <string name="confirm_flat_inappropriate">Do you really want to <b>flag</b> this Gift as inappropriate?</string>
    <string name="confirm_unflag_inappropriate">Do you really want to <b>unflag</b> this Gift as inappropriate?</string>
    <string name="confirm_delete_gift">Do you really want to delete this Gift?</string>
    <string name="gift_title">Gift title</string>
    <string name="gift_description">Gift description</string>
    <string name="select_gift_chain">Select a preexisting Gift chain</string>
    <string name="create_gift_chain">Create a new Gift chain</string>
    <string name="dont_add_to_gift_chain">Do not add the Gift to a Gift chain. Leave it unpublished</string>
    <string name="gift_chain_name">Gift chain name</string>
    <string name="choose_gift_chain">Choose existing</string>
    <string name="dont_publish_in_gift_chain">Do not publish this Gift in any Gift chain</string>
    <string name="save">Save</string>
    <string name="filter_by_name">Filter by name</string>
    <string name="total_touches">Total touches: %1$d</string>
    <string name="total_gift_count">Total gifts count: %1$d</string>
    <string name="order_by_gift_touches">Order by gift touches</string>
    <string name="order_by_gift_count">Order by gift count</string>
    <string name="dont_show_inappropriate_gifts">Do not show inappropriate gifts</string>
    <string name="dont_show_inappropriate_gifts_desc">Prevents showing Gifts you have flagged as inappropriate</string>
    <string name="sync_frequency">Sync frequency</string>
    <string name="delete_gift">Delete gift</string>
    <string name="edit_gift">Edit gift</string>

</resources>
