<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.capstone.potlatch.ActivityCreateUpdateGift">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/gift_detail_button_set">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText android:id="@+id/gift_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:hint="@string/gift_title"
                android:layout_marginBottom="@dimen/input_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/gift_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gift_image_height"
                android:scaleType="centerCrop"
                android:background="@color/gift_image_background"
                android:layout_marginBottom="@dimen/input_margin"/>

            <EditText android:id="@+id/gift_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/input_margin"
                android:inputType="textMultiLine"
                android:hint="@string/gift_description"
                android:maxLines="8"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_gift_chain"
                    android:id="@+id/giftChain_existing" />
                <ListView
                    android:id="@+id/gift_chain_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:choiceMode="singleChoice"
                    android:listSelector="@android:drawable/list_selector_background" >
                </ListView>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_gift_chain"
                    android:id="@+id/giftChain_new"
                    android:layout_marginTop="@dimen/input_margin" />
                <EditText android:id="@+id/gift_detail_new_gift_chain_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_gift_chain_name"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin"
                    android:text="@string/dont_add_to_gift_chain"
                    android:id="@+id/giftChain_none"  />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <LinearLayout android:id="@+id/gift_detail_button_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/button" />
    </LinearLayout>

</RelativeLayout>
